--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
     </div>
 
     <footer class="text-center py-4 text-gray-500 bg-gray-200">
-        <p>&copy; {{ year }} Your Company Name</p>
+        <p>&copy; 2024 Your Company Name</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
