I don't know what I did

--- a/templates/report.html
+++ b/templates/report.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Report</title>
 </head>
+<style>
+    body {
+        color: blue;
+        font-family: verdana;
+        font-size: 18pt;  /* Adjust font size as needed */
+    }
+</style>
 <body>
     <h1>Ghana Police</h1>
     <h2>Extract from Station Diary</h2>
