--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,12 @@
 <p class="text-gray-700 text-lg pb-4">
     Describe your app's purpose and features here.
 </p>
-<a href="#" class="inline-flex items-center px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-700">
+
+{% if user.is_authenticated %}
+<a href="{% url 'create_application' %}" class="inline-flex items-center px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-700">
     Get Started
 </a>
+{% endif %}
 
 <img src="{% static 'path/to/your/image.png' %}" alt="App Image" class="mx-auto mt-8 w-full h-auto">
 {% endblock %}
