--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load compress %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,46 +8,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Django app{% endblock %}</title>
-
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-
-    {% compress css %}
     <link rel="stylesheet" href="{% static 'src/output.css' %}">
-    {% endcompress %}
+    
 </head>
 
-<body class="bg-green-50">
-    <header class="flex justify-between items-center px-4 py-2 bg-white shadow-md">
-        <div class="flex items-center">
-            <a href="{% url 'logout' %}">
-              <img src="{% static 'path/to/your/logo.png' %}" alt="Logo" class="h-8 w-8 mr-4">
-            </a>
-            <span class="text-xl font-bold">Your App Name</span>
-        </div>
-        <div class="flex items-center space-x-4">
-            {% if user.is_authenticated %}
-                <span class="text-gray-700">Hi, {{ user.username }}</span>
-                <form action="{% url 'logout' %}" method="post" class="inline-block">
-                    {% csrf_token %}
-                    <button type="submit" class="text-blue-500 hover:text-blue-700">Log Out</button>
-                </form>
-            {% else %}
-                <a href="{% url 'login' %}" class="text-gray-700 hover:text-blue-500">Log In</a>
-                <a href="{% url 'signup' %}" class="text-gray-700 hover:text-blue-500">Sign Up</a>
-            {% endif %}
-        </div>
-    </header>
-
-    <div class="container mx-auto mt-4">
-        {% block content %}
-        {% endblock content %}
-    </div>
-
+<body class="bg-green-50 w-full h-full ">
+  <header class="flex justify-between items-center px-8 py-4 bg-white shadow-md">
+      <div class="flex items-center gap-4">
+          <a href="{% url 'logout' %}">
+            <img src={Logo} alt="Logo" class=" mr-4 w-[100px]"></img>
+          </a>
+          <span class="text-xl font-bold">Police Report</span>
+      </div>
+      <div class="flex items-center space-x-4 gap-6">
+          {% if user.is_authenticated %}
+              <span class="text-gray-700">Hi, {{ user.username }}</span>
+              <form action="{% url 'logout' %}" method="post" class="inline-block">
+                  {% csrf_token %}
+                  <button type="submit" class="text-blue-500 hover:text-blue-700">Log Out</button>
+              </form>
+          {% else %}
+              <a href="{% url 'login' %}" class="text-gray-700 hover:text-blue-500">Log In</a>
+              <a href="{% url 'signup' %}" class="text-gray-700 hover:text-blue-500">Sign Up</a>
+          {% endif %}
+      </div>
+  </header>
+  <div class=" mx-auto">
+      {% block content %}
+      {% endblock content %}
+  </div>
+  
     <footer class="text-center py-4 text-gray-500 bg-gray-200">
         <p>&copy; 2024 Your Company Name</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </body>
 
 </html>
