--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+<div className='text-center self-center items-center justify-center bg-green-50 h-[85vh] '>
 <h2 class="text-2xl font-bold py-4 text-center">Welcome to Your App</h2>
 <p class="text-gray-700 text-lg pb-4">
     Describe your app's purpose and features here.
@@ -18,4 +19,5 @@
 {% endif %}
 
 <img src="{% static 'path/to/your/image.png' %}" alt="App Image" class="mx-auto mt-8 w-full h-auto">
+</div>
 {% endblock %}
