--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,19 +4,21 @@
 
 {% block content %}
 <div class="flex items-center justify-center min-h-screen bg-green-50">
-  <div class="w-full max-w-md p-8 bg-white rounded-lg shadow-md">
+  <div class=" w-full max-w-md p-8 bg-white rounded-lg shadow-md">
     <h2 class="text-2xl font-bold text-center mb-4">Log In</h2>
     <form method="post" class="space-y-4">
       {% csrf_token %}
       <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-      <input type="text" id="username" name="username" class="block w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-blue-500 focus:ring-1">
+      <input type="text" id="username" name="username" class="block w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-blue-500 focus:ring-1"></input>
       <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-      <input type="password" id="password" name="password" class="block w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-blue-500 focus:ring-1">
-      <div class="flex items-center justify-between">
-        <button type="submit" class="px-4 py-2 bg-blue-500 rounded-md hover:bg-blue-700">Log In</button>
-        <a href="{% url 'signup' %}" class="px-4 py-2 bg-blue-500 rounded-md hover:bg-blue-700">Sign Up</a>
+      <input type="password" id="password" name="password" class="block w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-blue-500 focus:ring-1"></input>
+      <div class="flex flex-col  justify-between gap-5" >
+        <button type="submit" class="px-4 py-2 bg-blue-500 rounded-md hover:bg-blue-700 hover:text-white">Log In</button>
+        <div className='items-center justify-center text-sm text-center'>
+          If you don't have an account, <a href="{% url 'signup' %}" class=" text-xl text-blue-400 font-thin py-2 rounded-md hover:text-blue-700">Sign Up</a>
+        </div>        
       </div>
     </form>
   </div>
-</div>
+</div> 
 {% endblock %}
