Update img path

--- a/templates/home.html
+++ b/templates/home.html
@@ -42,6 +42,6 @@ This project outlines the development of an online police extract report form ap
       </a>
   {% endif %}
 
-  <img src="{% static 'img.png' %}" alt="App Image" class="mx-auto mt-8 w-full h-auto flex items-center justify-center mt-auto pt-20 bg-green-50">
+  <img src="./static/img.png alt="App Image" class="mx-auto mt-8 w-full h-auto flex items-center justify-center mt-auto pt-20 bg-green-50">
 </div>
 {% endblock %}
