--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <header class="flex justify-between items-center px-8 py-4 shadow-md bg-white z-10">
     <div class="flex items-center gap-4">
       <a href="{% url 'logout' %}">
-        <img src="{% static 'Ghana_Police.jpg' %}" alt="Logo" class="mr-4 w-[100px]">
+        <img src="./static/Ghana_Police.jpg" alt="Logo" class="mr-4 w-[100px]">
       </a>
       <span class="text-xl font-bold">Extract Report Form</span>
     </div>
