--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}Django app{% endblock %}</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @media screen and (max-width: 768px) {
+      .login-text,
+      .logout-text,
+      .signup-text {
+        display: none;
+      }
+
+      .login-icon,
+      .logout-icon,
+      .signup-icon {
+        display: inline-block;
+      }
+    }
+  </style>
 </head>
 
 <body class="bg-green-50 min-h-screen flex flex-col">
@@ -21,10 +36,10 @@
     </div>
     <div class="flex items-center space-x-4 gap-6">
       {% if user.is_authenticated %}
-        <span class="text-gray-700">Hi, {{ user.username }}</span>
+        <span class="text-gray-700 login-text">Hi, {{ user.username }}</span>
         <form action="{% url 'logout' %}" method="post" class="inline-block">
           {% csrf_token %}
-          <button type="submit" class="flex items-center space-x-1 text-green-500 hover:text-green-700">
+          <button type="submit" class="flex items-center space-x-1 text-green-500 hover:text-green-700 logout-text">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M3 3a1 1 0 00-1 1v12a1 1 0 001 1h14a1 1 0 001-1V4a1 1 0 00-1-1H3zm5.293 7.707a1 1 0 011.414 0l2.121-2.121a1 1 0 011.414 1.414l-5 5a1 1 0 01-1.414-1.414z" clip-rule="evenodd" />
             </svg>
@@ -32,18 +47,18 @@
           </button>
         </form>
       {% else %}
-        <a href="{% url 'login' %}" class="text-gray-700 hover:text-green-500 flex items-center space-x-1">
+        <a href="{% url 'login' %}" class="text-gray-700 hover:text-green-500 flex items-center space-x-1 login-icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zM4 11a1 1 0 100-2 1 1 0 000 2zm8 0a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
           </svg>
-          <span>Log In</span>
+          <span class="login-text">Log In</span>
         </a>
-        <a href="{% url 'signup' %}" class="text-gray-700 hover:text-green-500 flex items-center space-x-1">
+        <a href="{% url 'signup' %}" class="text-gray-700 hover:text-green-500 flex items-center space-x-1 signup-icon">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6zM8 11a1 1 0 11-.099-1.392A3.001 3.001 0 018 11zm3-4a1 1 0 11.707 1.707A1 1 0 0111 9zm2 5h-5a1 1 0 010-2h5a1 1 0 010 2z"
             clip-rule="evenodd" />
         </svg>
-    <span>Sign Up</span>
+    <span class="signup-text">Sign Up</span>
 </a>
 {% endif %}
 </div>
