--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -20,32 +20,37 @@
       <input class="input w-full p-2 text-black rounded-lg" type="tel" name="phone_number" id="id_phone_number" required />
     </p>
 
-    <!-- Add Date and Time of Occurrence field -->
     <p class="mb-4 flex items-center">
       <label for="id_occurrence_date_time" class="label text-gray-700 text-sm font-medium mr-2">Date and Time of Occurrence:</label>
       <input class="input w-full p-2 text-black rounded-lg" type="datetime-local" name="occurrence_date_time" id="id_occurrence_date_time" required />
     </p>
 
-    <!-- Add Address field -->
     <p class="mb-4 flex items-center">
       <label for="id_address" class="label text-gray-700 text-sm font-medium mr-2">Address:</label>
       <input class="input w-full p-2 text-black rounded-lg" type="text" name="address" id="id_address" required />
     </p>
 
     <fieldset class="fieldset border border-gray-300 rounded-lg px-4 py-4">
-        <legend class="legend text-xl font-bold text-gray-700 mb-2">Lost Document</legend>
-        <p class="mb-4 flex items-center">
-          <label for="lost_document" class="label text-gray-700 text-sm font-medium mr-2">Select Lost Document:</label>
-          <select id="lost_document" name="lost_document" class="input w-full px-3 py-2 border rounded-md text-black">
-            <option value="passport">Passport</option>
-            <option value="drivers_license">Driver's License</option>
-            <option value="ghana_card">Ghana Card</option>
-            <option value="other">Other (Please Specify)</option>
-          </select>
+        <legend class="legend text-xl font-bold text-gray-700 mb-2">Lost Documents (Select all that apply):</legend>
+        <p>
+          <label class="checkbox-label">
+            <input type="checkbox" name="lost_document" value="passport"> Passport
+          </label>
         </p>
-        <p id="other_document_field" class="hidden mb-4 flex items-center">
-          <label for="other_document_details" class="label text-gray-700 text-sm font-medium mr-2">Other Document Details:</label>
-          <input class="input w-full p-2 text-black rounded-lg" type="text" name="other_document_details" id="other_document_details" />
+        <p>
+          <label class="checkbox-label">
+            <input type="checkbox" name="lost_document" value="drivers_license"> Driver's License
+          </label>
+        </p>
+        <p>
+          <label class="checkbox-label">
+            <input type="checkbox" name="lost_document" value="ghana_card"> Ghana Card
+          </label>
+        </p>
+        <p>
+          <label class="checkbox-label">
+            <input type="checkbox" name="lost_document" value="voter_id_card"> Voter ID Card
+          </label>
         </p>
       </fieldset>
       <br><br><b></b>
@@ -54,18 +59,4 @@
       </div>
   </form>
 </div>
-
-<script>
-  const lostDocumentSelect = document.getElementById('lost_document');
-  const otherDocumentField = document.getElementById('other_document_field');
-
-  lostDocumentSelect.addEventListener('change', (event) => {
-    if (event.target.value === 'other') {
-      otherDocumentField.classList.remove('hidden');
-    } else {
-      otherDocumentField.classList.add('hidden');
-    }
-  });
-</script>
-
 {% endblock %}
