--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -31,25 +31,25 @@
     </p>
 
     <fieldset class="fieldset border border-gray-300 rounded-lg px-4 py-4">
-        <legend class="legend text-xl font-bold text-gray-700 mb-2">Lost Documents (Select all that apply):</legend>
+        <legend class="legend text-xl font-bold text-gray-700 mb-2">Lost Document:</legend>
         <p>
-          <label class="checkbox-label">
-            <input type="checkbox" name="lost_document" value="passport"> Passport
+          <label class="radio-label">
+            <input type="radio" name="lost_document" value="passport"> Passport
           </label>
         </p>
         <p>
-          <label class="checkbox-label">
-            <input type="checkbox" name="lost_document" value="drivers_license"> Driver's License
+          <label class="radio-label">
+            <input type="radio" name="lost_document" value="drivers_license"> Driver's License
           </label>
         </p>
         <p>
-          <label class="checkbox-label">
-            <input type="checkbox" name="lost_document" value="ghana_card"> Ghana Card
+          <label class="radio-label">
+            <input type="radio" name="lost_document" value="ghana_card"> Ghana Card
           </label>
         </p>
         <p>
-          <label class="checkbox-label">
-            <input type="checkbox" name="lost_document" value="voter_id_card"> Voter ID Card
+          <label class="radio-label">
+            <input type="radio" name="lost_document" value="voter_id_card"> Voter ID Card
           </label>
         </p>
       </fieldset>
