--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,19 +3,30 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="flex items-center justify-center mt-auto pt-40  bg-green-50">
+<div class="flex items-center justify-center mt-auto pt-40 bg-green-50">
   <div class="w-full max-w-md p-8 bg-white rounded-lg shadow-md">
     <h2 class="text-2xl font-bold text-center mb-4">Log In</h2>
+
+    {% if messages %}
+      <div class="mb-4">
+        {% for message in messages %}
+          <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded-md mb-2" role="alert">
+            {{ message }}
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
+
     <form method="post" class="space-y-4">
       {% csrf_token %}
       <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
       <input type="text" id="username" name="username" class="block w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-green-500 focus:ring-1"></input>
       <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
       <input type="password" id="password" name="password" class="block w-full px-3 py-2 rounded-md border border-gray-300 focus:outline-none focus:ring-green-500 focus:ring-1"></input>
-      <div class="flex flex-col  justify-between gap-5" >
+      <div class="flex flex-col justify-between gap-5">
         <button type="submit" class="px-4 py-2 bg-green-500 rounded-md hover:bg-green-700 hover:text-white">Log In</button>
-        <div className='items-center justify-center text-sm text-center' style="display: flex; justify-content: center; align-items: center;">
-          If you don't have an account, <a href="{% url 'signup' %}" class=" text-xl text-green-900 font-thin py-2 rounded-md hover:text-green-1700">Sign Up</a>
+        <div class="items-center justify-center text-sm text-center">
+          If you don't have an account, <a href="{% url 'signup' %}" class="text-xl text-green-900 font-thin py-2 rounded-md hover:text-green-1700">Sign Up</a>
         </div>        
       </div>
     </form>
