ajdust column width

--- a/templates/report.html
+++ b/templates/report.html
@@ -27,8 +27,8 @@
         }
         /* Adjust column widths */
         th:nth-child(2)/* Target second column (Occurrence) */
-         { /* Target third column (No.) */
-            width: 50%;  /* Adjust width as desired (here 40% each) */
+        {
+            width: 50%;
         }
 
         /* Header Styles */
