--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -13,22 +13,17 @@
         <label for="id_name" class="label text-gray-700 text-sm font-medium mr-2">Full Name:</label>
         <input class="input w-full p-2 text-black rounded-lg" type="text" name="name" id="id_name" required />
       </p>
+      <p cla
+      ss="mb-4 flex items-center">
+        <label for="id_phone_number" class="label text-gray-700 text-sm font-medium mr-2">Phone Number:</label>
+        <input class="input w-full p-2 text-black rounded-lg" type="tel" name="phone_number" id="id_phone_number" required />
+      </p>
+  
+      <p class="mb-4 flex items-center">
+        <label for="id_address" class="label text-gray-700 text-sm font-medium mr-2">Address:</label>
+        <input class="input w-full p-2 text-black rounded-lg" type="text" name="address" id="id_address" required />
+      </p>
     </fieldset>
-
-    <p class="mb-4 flex items-center">
-      <label for="id_phone_number" class="label text-gray-700 text-sm font-medium mr-2">Phone Number:</label>
-      <input class="input w-full p-2 text-black rounded-lg" type="tel" name="phone_number" id="id_phone_number" required />
-    </p>
-
-    <p class="mb-4 flex items-center">
-      <label for="id_occurrence_date_time" class="label text-gray-700 text-sm font-medium mr-2">Date and Time of Occurrence:</label>
-      <input class="input w-full p-2 text-black rounded-lg" type="datetime-local" name="occurrence_date_time" id="id_occurrence_date_time" required />
-    </p>
-
-    <p class="mb-4 flex items-center">
-      <label for="id_address" class="label text-gray-700 text-sm font-medium mr-2">Address:</label>
-      <input class="input w-full p-2 text-black rounded-lg" type="text" name="address" id="id_address" required />
-    </p>
 
     <fieldset class="fieldset border border-gray-300 rounded-lg px-4 py-4">
         <legend class="legend text-xl font-bold text-gray-700 mb-2">Lost Document:</legend>
@@ -52,7 +47,30 @@
             <input type="radio" name="lost_document" value="voter_id_card"> Voter ID Card
           </label>
         </p>
+
+        <p class="mb-4 flex items-center">
+          <label for="id_occurrence_date_time" class="label text-gray-700 text-sm font-medium mr-2">Date and Time of Occurrence:</label>
+          <input class="input w-full p-2 text-black rounded-lg" type="datetime-local" name="occurrence_date_time" id="id_occurrence_date_time" required />
+        </p>
+        
       </fieldset>
+
+        <fieldset class="fieldset border border-gray-300 rounded-lg px-4 py-4">
+          <legend class="legend text-xl font-bold text-gray-700 mb-2">Document Details</legend>
+          <p class="mb-4 flex items-center">
+            <label for="id_issue_date" class="label text-gray-700 text-sm font-medium mr-2">Issue Date:</label>
+            <input class="input w-full p-2 text-black rounded-lg" type="date" name="issue_date" id="id_issue_date" required />
+          </p>
+          <p class="mb-4 flex items-center">
+            <label for="id_expiry_date" class="label text-gray-700 text-sm font-medium mr-2">Expiry Date:</label>
+            <input class="input w-full p-2 text-black rounded-lg" type="date" name="expiry_date" id="id_expiry_date" required />
+          </p>
+          <p class="mb-4 flex items-center">
+            <label for="id_identification_number" class="label text-gray-700 text-sm font-medium mr-2">Identification Number:</label>
+            <input class="input w-full p-2 text-black rounded-lg" type="text" name="identification_number" id="id_identification_number" required />
+          </p>
+        </fieldset>
+
       <br><br><b></b>
       <div>
         <button type="submit" class="button px-4 py-2 bg-green-500 hover:bg-green-700 text-white rounded-md">Submit Application</button>
