--- a/templates/application_form.html
+++ b/templates/application_form.html
@@ -13,8 +13,7 @@
         <label for="id_name" class="label text-gray-700 text-sm font-medium mr-2">Full Name:</label>
         <input class="input w-full p-2 text-black rounded-lg" type="text" name="name" id="id_name" required />
       </p>
-      <p cla
-      ss="mb-4 flex items-center">
+      <p class="mb-4 flex items-center">
         <label for="id_phone_number" class="label text-gray-700 text-sm font-medium mr-2">Phone Number:</label>
         <input class="input w-full p-2 text-black rounded-lg" type="tel" name="phone_number" id="id_phone_number" required />
       </p>
@@ -52,7 +51,7 @@
           <label for="id_occurrence_date_time" class="label text-gray-700 text-sm font-medium mr-2">Date and Time of Occurrence:</label>
           <input class="input w-full p-2 text-black rounded-lg" type="datetime-local" name="occurrence_date_time" id="id_occurrence_date_time" required />
         </p>
-        
+
       </fieldset>
 
         <fieldset class="fieldset border border-gray-300 rounded-lg px-4 py-4">
